--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SanRafa"
         tools:targetApi="31">
         <activity
+            android:name=".Sitios"
+            android:exported="false" />
+        <activity
+            android:name=".Restaurantes"
+            android:exported="false" />
+        <activity
+            android:name=".Hoteles"
+            android:exported="false" />
+        <activity
             android:name=".Home"
             android:exported="false" />
         <activity
