--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SanRafa"
         tools:targetApi="31">
         <activity
+            android:name=".Acercade"
+            android:exported="false" />
+        <activity
+            android:name=".Resena"
+            android:exported="false" />
+        <activity
             android:name=".Sitios"
             android:exported="false" />
         <activity
