--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".Home"
+            android:theme="@style/Theme.AppCompat"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
